added match engine, edited quite page

--- a/templates/stockData.html
+++ b/templates/stockData.html
@@ -11,7 +11,7 @@
 <body style="background-color: black">
     
     <div id="stock_data_show">
-        <h2 style="color: snow; text-align: center; padding-top:15%">{{ stock_data }}</h2>
+        <h2 style="color: snow; text-align: center; padding-top:15%">{{ stock_request }}</h2>
     </div>
     <div id="trade_buttons" style="padding-top:2%;text-align: center">
     <div id="buy_button" style="padding-left: 20%;width: 60%">
